# P2

./: .gitignore  CMakeLists.txt  Makefile  README.md  debug  package-lock.json  run  test
.history/src/: cpu_20251024170108.h  cpu_20251025231928.h  mapper_20251025155345.cpp  mapper_20251025160009.h  mapper_20251025161736.cpp  mapper_20251025225147.cpp  mapper_20251025225510.cpp  mapper_20251025231605.h  mapper_20251025231608.h  mapper_20251026000413.h  mapper_20251026000439.h  ppu_20251025155458.h  ppu_20251025161806.cpp  ppu_20251025230738.cpp  ppu_20251025231611.cpp  ppu_20251025231623.cpp  ppu_20251025231904.h  ppu_20251025232110.cpp  ppu_20251025232118.cpp  ppu_20251025232341.cpp  ppu_20251025232343.cpp  ppu_20251025232658.cpp  ppu_20251025233332.cpp  ppu_20251025233337.cpp  ppu_20251025233343.cpp  ppu_20251025233416.cpp  ppu_20251025233426.cpp  ppu_20251025233715.cpp  ppu_20251025233744.cpp  ppu_20251025233810.cpp  ppu_20251025234029.cpp  ppu_20251025234103.cpp  ppu_20251025234142.cpp  ppu_20251025234255.cpp  ppu_20251025234857.cpp  ppu_20251025234925.cpp  ppu_20251025235219.cpp  ppu_20251025235232.cpp  ppu_20251025235405.cpp  ppu_20251025235423.cpp  (+9 more)
src/: cpu.cpp  cpu.h  input.cpp  input.h  mapper.cpp  mapper.h  memory.h  ppu.cpp  ppu.h  run.cpp  test.cpp
testing/: legend_of_zelda.nes
